--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
+    "react-calendar": "^6.0.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^4.2.1",
