--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
     "react-scroll-parallax": "^3.5.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
