--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "leaflet": "1.9",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
     "react-calendar": "^6.0.0",
