--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "file-saver": "^2.0.5",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.24",
     "leaflet": "1.9",
@@ -43,7 +44,8 @@
     "react-scroll-parallax": "^3.5.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
