--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^4.2.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
