--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/x-charts": "^8.14.0",
     "@mui/x-data-grid": "^8.14.1",
     "@mui/x-date-pickers": "^8.14.1",
+    "@nivo/core": "^0.99.0",
+    "@nivo/line": "^0.99.0",
     "@react-google-maps/api": "^2.20.7",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
