--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "MerchantApp",
-  "name": "Merchant Product Manager",
-  "description": "Mobile PWA for merchants to manage products, pricing, and inventory",
+  "short_name": "Damayan",
+  "name": "Damayan Online System",
+  "description": "A member-based savings, merchant, and income platform",
   "id": "/damayan-savings/",
   "start_url": "/damayan-savings/",
   "scope": "/damayan-savings/",
