--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@nivo/bar": "^0.99.0",
     "@nivo/core": "^0.99.0",
     "@nivo/line": "^0.99.0",
-    "@react-google-maps/api": "^2.20.7",
+    "@react-google-maps/api": "^2.20.8",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -31,22 +31,17 @@
     "file-saver": "^2.0.5",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.24",
-    "leaflet": "1.9",
-    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "react": "^18.3.1",
-    "react-big-calendar": "^1.19.4",
     "react-calendar": "^6.0.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
-    "react-leaflet": "^4.2.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
     "react-scroll-parallax": "^3.5.0",
-    "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
@@ -78,6 +73,13 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "autoprefixer": "^10.4.23",
+    "caniuse-lite": "^1.0.30001761",
+    "gh-pages": "^6.3.0",
+    "html-webpack-plugin": "^5.6.5",
+    "lodash": "^4.17.21",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.0",
+    "postcss-preset-env": "^10.6.0"
   }
 }
