--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "react-intersection-observer": "^9.16.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
     "react-scroll-parallax": "^3.5.0",
     "recharts": "^3.2.1",
@@ -47,18 +46,14 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:run": "vitest run",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "deploy": "gh-pages -d dist"
   },
   "browserslist": {
     "production": [
@@ -73,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.23",
     "caniuse-lite": "^1.0.30001761",
     "gh-pages": "^6.3.0",
@@ -80,6 +76,9 @@
     "lodash": "^4.17.21",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
-    "postcss-preset-env": "^10.6.0"
+    "postcss-preset-env": "^10.6.0",
+    "vite": "^7.1.3",
+    "vitest": "^3.2.4",
+    "jsdom": "^26.1.0"
   }
 }
